Fix - menu issue on small device

--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -363,8 +363,6 @@ li.default-menu {
 
 .main-small-navigation {
 	float: none;
-	padding-top: 0;
-	margin-top: 5px;
 
 	ul {
 		margin: 0;
