--- a/assets/scss/_responsive.scss
+++ b/assets/scss/_responsive.scss
@@ -148,12 +148,16 @@
 		display: block;
 	}
 	.main-navigation {
+		float: none;
 		&.toggled .nav-menu {
 			display: block;
 		}
 		ul {
 			display: none;
 		}
+		
+	}
+	.spacious-header-style-two .main-navigation {
 		float: none;
 	}
 	#featured-slider {
@@ -224,36 +228,47 @@
 
 	.better-responsive-menu {
 		#header-right-section {
+
+		.widget {
+			margin-bottom: 10px;
+		}
 			float: right;
 			margin-top: 15px;
 			max-width: 100%;
 		}
+
 		#site-navigation {
 			float: right;
 			margin-top: 10px;
 			padding: 0;
 		}
+
 		.main-small-navigation {
 			margin-top: 10px;
 		}
+
 		#header-logo-image {
 			float: left;
 			margin-bottom: 0;
 			margin-right: 10px;
 		}
+
 		#header-left-section {
 			float: left;
 			margin-top: 10px;
 		}
+
 		#header-text {
 			margin: 13px 0 0;
 			float: left;
 			text-align: left;
 		}
+
 		#site-description {
 			font-size: 13px;
 			margin-bottom: 0;
 		}
+
 		#site-title a {
 			font-size: 28px;
 		}
@@ -269,16 +284,21 @@
 			text-align: center;
 			width: 40px;
 		}
+
 		#site-navigation {
 			float: left;
 			margin-top: 0;
 		}
+
 		#header-text-nav-wrap {
+			padding: 0;
+
 			#header-right-section .widget {
 				padding: 0;
 			}
-			padding: 0;
+			
 		}
+
 		.site-header .menu-toggle::before {
 			font-size: 21px;
 			left: 50%;
@@ -292,11 +312,13 @@
 			-o-transform: translate(-50%, -50%);
 			transform: translate(-50%, -50%);
 		}
+
 		#header-text-nav-container {
 			position: relative;
 			margin-bottom: 15px;
 			border: none;
 		}
+
 		#site-navigation .menu-primary-container {
 			left: 0;
 			position: absolute;
@@ -304,10 +326,9 @@
 			width: 100%;
 			z-index: 9999;
 		}
-		.spacious-header-style-two {
-			#header-right-section {
-				margin-top: 0;
-			}
+
+		.spacious-header-style-two #header-right-section {
+			margin-top: 0;
 		}
 	}
 }
@@ -345,16 +366,18 @@
 			text-align: center;
 		}
 		
-		#header-left-section,
-		#header-right-section {
+		#header-left-section {
 			padding-top: 10px;
 			text-align: center;
+			float: none;
+		}
+		#header-right-section {
+			padding-top: 10px;
 			float: none;
 		}
 		
 		#header-right-sidebar {
 			float: right;
-			margin-top: 10px;
 		}
 
 		#site-navigation{
