--- a/style.css
+++ b/style.css
@@ -2216,8 +2216,6 @@ li.default-menu {
 
 .main-small-navigation {
 	float: none;
-	padding-top: 0;
-	margin-top: 5px;
 }
 
 .main-small-navigation ul {
@@ -2775,6 +2773,9 @@ li.default-menu {
 	.main-navigation ul {
 		display: none;
 	}
+	.spacious-header-style-two .main-navigation {
+		float: none;
+	}
 	#featured-slider .entry-container {
 		max-width: 70%;
 	}
@@ -2841,6 +2842,9 @@ li.default-menu {
 		float: right;
 		margin-top: 15px;
 		max-width: 100%;
+	}
+	.better-responsive-menu #header-right-section .widget {
+		margin-bottom: 10px;
 	}
 	.better-responsive-menu #site-navigation {
 		float: right;
@@ -2949,15 +2953,17 @@ li.default-menu {
 		margin-top: 12px;
 		text-align: center;
 	}
-	.better-responsive-menu #header-left-section,
-	.better-responsive-menu #header-right-section {
+	.better-responsive-menu #header-left-section {
 		padding-top: 10px;
 		text-align: center;
 		float: none;
 	}
+	.better-responsive-menu #header-right-section {
+		padding-top: 10px;
+		float: none;
+	}
 	.better-responsive-menu #header-right-sidebar {
 		float: right;
-		margin-top: 10px;
 	}
 	.better-responsive-menu #site-navigation {
 		float: none;
